--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/Modificar.cshtml
@@ -37,7 +37,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="checkbox">
                     <label for="Se_Deprecia">@Html.CheckBoxFor(q => q.Se_Deprecia) Aplica depreciación</label>
                 </div>
@@ -63,14 +63,14 @@
         <div class="col-md-6">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Activo">Cuenta contable activo</label>
+                    <label for="IdCtaCble_Activo">Cuenta contable activo*</label>
                     @Html.Partial("_CmbCuenta_TipoAF1", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Activo, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Dep_Acum">Cuenta contable depreciación acumulada</label>
+                    <label for="IdCtaCble_Dep_Acum">Cuenta contable depreciación acumulada*</label>
                     @Html.Partial("_CmbCuenta_TipoAF2", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Dep_Acum, "", new { @class = "text-danger" })
                 </div>
@@ -78,7 +78,7 @@
 
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Gastos_Depre">Cuenta contable gastos de depreciación</label>
+                    <label for="IdCtaCble_Gastos_Depre">Cuenta contable gastos de depreciación*</label>
                     @Html.Partial("_CmbCuenta_TipoAF3", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Gastos_Depre, "", new { @class = "text-danger" })
                 </div>
@@ -87,7 +87,7 @@
         <div class="col-md-6">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_CostoVenta">Cuenta contable costo de venta</label>
+                    <label for="IdCtaCble_CostoVenta">Cuenta contable costo de venta*</label>
                     @Html.Partial("_CmbCuenta_TipoAF4", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_CostoVenta, "", new { @class = "text-danger" })
                 </div>
@@ -95,14 +95,14 @@
 
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Mejora">Cuenta contable mejora</label>
+                    <label for="IdCtaCble_Mejora">Cuenta contable mejora*</label>
                     @Html.Partial("_CmbCuenta_TipoAF5", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Mejora, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Baja">Cuenta contable baja</label>
+                    <label for="IdCtaCble_Baja">Cuenta contable baja*</label>
                     @Html.Partial("_CmbCuenta_TipoAF6", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Baja, "", new { @class = "text-danger" })
                 </div>
@@ -110,7 +110,7 @@
 
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Retiro">Cuenta contable retiro</label>
+                    <label for="IdCtaCble_Retiro">Cuenta contable retiro*</label>
                     @Html.Partial("_CmbCuenta_TipoAF7", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Retiro, "", new { @class = "text-danger" })
                 </div>
