--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Nuevo.cshtml
@@ -200,7 +200,7 @@
                         </div>
                         <div class="col-md-2">
                             <div class="form-group">
-                                <label for="cl_plazo">Crédito en dias*</label>
+                              <label for="cl_plazo">Crédito en dias*</label>
                                 @Html.TextBoxFor(q => q.cl_plazo, new { @class = "form-control", @id = "cl_plazo", @readonly = "readonly" })
                                 @Html.ValidationMessageFor(q => q.cl_plazo, "", new { @class = "text-danger" })
                             </div>
@@ -211,9 +211,9 @@
                     <div class="col-md-12">
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label for="NivelPrecio">Nivel de precio*</label>
-                                @Html.DropDownListFor(q => q.NivelPrecio, new SelectList(ViewBag.lst_nivel_precio, "Key", "Value"), new { @class = "form-control", @id = "NivelPrecio" })
-                                @Html.ValidationMessageFor(q => q.NivelPrecio, "", new { @class = "text-danger" })
+                                <label for="IdNivel">Nivel de descuento*</label>
+                                @Html.DropDownListFor(q => q.IdNivel, new SelectList(ViewBag.lst_nivel, "IdNivel", "Descripcion"), new { @class = "form-control", @id = "NivelPrecio" })
+                                @Html.ValidationMessageFor(q => q.IdNivel, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-3">
