--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Activos";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -10,6 +10,11 @@
 
 @using (Html.BeginForm())
 {
+    <div class="row">
+        <div class="col-md-12">
+            <a class="btn btn-primary" href="@Url.Action("Importar","ActivoFijo",new { Area = "ActivoFijo", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
+        </div>
+    </div>
 
     @Html.Action("GridViewPartial_activo_fijo")
 
