--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NivelDescuento/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NivelDescuento/Nuevo.cshtml
@@ -27,7 +27,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="Observacion">Observación*</label>
+                    <label for="Observacion">Observación</label>
                     @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.Observacion, "", new { @class = "text-danger" })
                 </div>
