--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
@@ -60,7 +60,7 @@
                     <div id="dragZone">
                         <span class="dragZoneText">Seleccione una foto</span>
                     </div>
-                    <img id="uploadedImage" src="~/Content/imagenes/@Model.IdEmpleado" alt="" style="display: none" onload="onImageLoad()" />
+                    <img id="uploadedImage" src="~/Content/imagenes/empleados/@Model.IdEmpleado" alt="" style="display: none" onload="onImageLoad()" />
                     <div id="dropZone" style="display: none">
                         <span class="dropZoneText">Drop an image here</span>
                     </div>
@@ -83,7 +83,7 @@
                    settings.ValidationSettings.MaxFileSize = 4194304;
                    settings.ValidationSettings.AllowedFileExtensions = new string[] {".jpg", ".jpeg", ".gif", ".png"};
                    settings.ValidationSettings.ErrorStyle.CssClass = "validationMessage";
-                   // settings.BrowseButton.Text = "Select an image for upload...";
+                   settings.ClientSideEvents.FilesUploadStart = "OnFileUploadStart";
                    settings.Styles.DropZone.CssClass = "uploadControlDropZone";
                    settings.ClientSideEvents.DropZoneEnter = "function(s, e) { if(e.dropZone.id == 'externalDropZone') setElementVisible('dropZone', true); }";
                    settings.ClientSideEvents.DropZoneLeave = "function(s, e) { if(e.dropZone.id == 'externalDropZone') setElementVisible('dropZone', false); }";
@@ -860,30 +860,24 @@
     };
 
 
-    function set_id_nom_imagen()
-            {
-                 var datos = {
-                     IdEmpleado: $("#IdEmpleado").val()
-                }
-                $.ajax({
-                    type: 'POST',
-                    data: JSON.stringify(datos),
-                    url: '@Url.Action("GenerarPrestamo", "Prestamos", new { Area = "RRHH" })',
-                    async: false,
-                    bDeferRender: true,
-                    bProcessing: true,
-                    dataType: 'json',
-                    contentType: 'application/json; charset=utf-8',
-                    success: function (data)
-                    {
-
-                        GridViewPartial_prestamos_det.PerformCallback();
-
-                    },
-                    error: function (error)
-                    {
-                    }
-                    });
-};
+   function OnFileUploadStart(s, e) {
+        var datos = {
+            IdEmpresa: $("#IdEmpleado").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("actualizarFoto", "Empleado",new { Area = "RRHH"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
+            }
+        });        
+    }
 
 </script>
